--- a/blocks/anchor-nav/anchor-nav.css
+++ b/blocks/anchor-nav/anchor-nav.css
@@ -1,9 +1,3 @@
-/* stylelint-disable selector-class-pattern */
-
-.section:has(.anchor-nav-wrapper) {
-  margin: 0;
-}
-
 .anchor-nav-wrapper {
   display: none;
 }
@@ -30,7 +24,6 @@
     left: 0;
     right: 0;
     z-index: 3;
-    box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
   }
 
   /* Style the block itself as a flex container - preserves Universal Editor structure */
@@ -153,7 +146,7 @@
   }
 
   .anchor-nav-link.button.secondary,
-  a.button.secondary:any-link,
+  .button.secondary,
   .anchor-nav-link.button.secondary:hover,
   .anchor-nav-link.button.secondary:focus {
     display: inline-flex;
