--- a/blocks/banner/banner.css
+++ b/blocks/banner/banner.css
@@ -18,21 +18,9 @@
   text-align: center;
 }
 
-.banner a.button span.icon {
-  display: inline-flex;
-  align-items: center;
-  margin-left: var(--spacing-xxs);
-}
-
-.banner {
-
-  a.button.primary:hover, a.button.primary:focus, button.primary:hover, button.primary:focus {
-    background-color: var(--btn-color-red);
-    border-color: var(--btn-color-red);
-    color: var(--color-white);
+.banner .button.primary:hover {
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .5);
-}
-}
+  }
 
 /* Main content container */
 .banner-content {
