--- a/blocks/cta-sticky/cta-sticky.css
+++ b/blocks/cta-sticky/cta-sticky.css
@@ -54,28 +54,21 @@ p + p {
   margin-top: 0;
 }
 
-p.button-container a.button.primary:any-link {
-  background-color: var(--color-red-300);
-  border-color: var(--color-red-300);
-  color: var(--color-white);
-  font-size: var(--body-font-size-xs);
-  box-shadow: 0 0 20px 0 rgb(0 0 0 / 25%);
+.button-container {
+  margin: var(--spacing-xxs) 0;
+
+  .button {
+  box-shadow: var(--btn-shadow);
   margin: 0;
   min-width: 234px;
-  display: inline-flex;
-  align-items: center;
   justify-content: center;
-  padding: var(--spacing-xxs);
-
-  &:hover {
-    border-color: var(--color-red-300);
-    background-color: var(--color-red-300);
+  padding: calc(var(--spacing-m) / 2);
   }
 }
 
 div:empty {
   margin: 0;
-}
+ }
 }
 
 .cta-sticky-mobile-content {
@@ -94,11 +87,6 @@ div:empty {
   .cta-sticky {
     p {
       font-size: var(--body-font-size-xs);
-    }
-
-    p.button-container a.button.primary:any-link {
-      font-size: var(--body-font-size-s);
-      padding: var(--spacing-xs);
     }
   }
 
